// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FamilyCard desktop balance 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcFamilyCard YpcFamilyCard_view_vertical"
>
  <div
    className="YpcFamilyCard-Icons"
  >
    <i
      aria-hidden={true}
      className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
    />
  </div>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      <div
        className="YpcFamilyCard-Name"
      >
        Семейная
      </div>
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      RUB 100,500 доступно
    </div>
  </div>
</article>
`;

exports[`FamilyCard desktop className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      <div
        className="YpcFamilyCard-Name"
      >
        Семейная
      </div>
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      RUB 100,500 доступно
    </div>
  </div>
</article>
`;

exports[`FamilyCard desktop currency 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcFamilyCard YpcFamilyCard_view_vertical"
>
  <div
    className="YpcFamilyCard-Icons"
  >
    <i
      aria-hidden={true}
      className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
    />
  </div>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      <div
        className="YpcFamilyCard-Name"
      >
        Семейная
      </div>
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      $100,500 доступно
    </div>
  </div>
</article>
`;

exports[`FamilyCard desktop issuer 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_tinkoff-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      <div
        className="YpcFamilyCard-Name"
      >
        Семейная
      </div>
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      RUB 100,500 доступно
    </div>
  </div>
</article>
`;

exports[`FamilyCard desktop limitType 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcFamilyCard YpcFamilyCard_view_vertical"
>
  <div
    className="YpcFamilyCard-Icons"
  >
    <i
      aria-hidden={true}
      className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
    />
  </div>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      <div
        className="YpcFamilyCard-Name"
      >
        Семейная
      </div>
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      RUB 100,500 доступно
    </div>
  </div>
</article>
`;

exports[`FamilyCard desktop number 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcFamilyCard YpcFamilyCard_view_vertical"
>
  <div
    className="YpcFamilyCard-Icons"
  >
    <i
      aria-hidden={true}
      className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
    />
  </div>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      <div
        className="YpcFamilyCard-Name"
      >
        Семейная
      </div>
    </h4>
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcFamilyCard-Number YpcFamilyCard-Number_view_vertical YpcFamilyCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        5432
      </span>
    </h4>
  </div>
</article>
`;

exports[`FamilyCard desktop paySystem 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      <div
        className="YpcFamilyCard-Name"
      >
        Семейная
      </div>
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      RUB 100,500 доступно
    </div>
  </div>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_mastercard-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
  />
</article>
`;

exports[`FamilyCard desktop view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      <div
        className="YpcFamilyCard-Name"
      >
        Семейная
      </div>
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      RUB 100,500 доступно
    </div>
  </div>
</article>
`;

exports[`FamilyCard desktop view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcFamilyCard YpcFamilyCard_view_vertical"
>
  <div
    className="YpcFamilyCard-Icons"
  >
    <i
      aria-hidden={true}
      className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
    />
  </div>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      <div
        className="YpcFamilyCard-Name"
      >
        Семейная
      </div>
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      RUB 100,500 доступно
    </div>
  </div>
</article>
`;

exports[`FamilyCard touch-phone balance 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Семейная
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      RUB 100,500 доступно
    </div>
  </div>
</article>
`;

exports[`FamilyCard touch-phone className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Семейная
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      RUB 100,500 доступно
    </div>
  </div>
</article>
`;

exports[`FamilyCard touch-phone currency 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Семейная
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      $100,500 доступно
    </div>
  </div>
</article>
`;

exports[`FamilyCard touch-phone issuer 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_tinkoff-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Семейная
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      RUB 100,500 доступно
    </div>
  </div>
</article>
`;

exports[`FamilyCard touch-phone limitType 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Семейная
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      RUB 100,500 доступно до конца месяца
    </div>
  </div>
</article>
`;

exports[`FamilyCard touch-phone number 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Семейная
    </h4>
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcFamilyCard-Number YpcFamilyCard-Number_view_horizontal YpcFamilyCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        5432
      </span>
    </h4>
  </div>
</article>
`;

exports[`FamilyCard touch-phone paySystem 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Семейная
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      RUB 100,500 доступно
    </div>
  </div>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_mastercard-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
  />
</article>
`;

exports[`FamilyCard touch-phone view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Семейная
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      RUB 100,500 доступно
    </div>
  </div>
</article>
`;

exports[`FamilyCard touch-phone view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFamilyCard YpcFamilyCard_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Семейная
    </h4>
    <div
      className="YpcFamilyCard-Balance"
    >
      RUB 100,500 доступно
    </div>
  </div>
</article>
`;
